# xupric

./: .gitignore  README.md  UPDATE.sh  meson.build  sulfer.conf  xupric.conf
res/: sulfer.desktop  xupric.1  xupric.1.md  xupric.desktop
src/: config.h  main.ui  sulfer.c  wrap.h  xupric.c
src/cfg/: cfg.c  cfg.h  config.c  config.h
src/css/: dark_mode.css  main.css  scrollbar.css
src/extras/: bookmark.c  bookmark.h  cookie.c  cookie.h  history.c  history.h
src/frame/: download.c  download.h  frame.c  frame.h  gtk_wrap.h  gwrap.h  handle.c  handle.h  main.ui  style.h  view.c  view.h
src/frame/offs/: offs.c  offs.h
src/frame/style/: style.c  style.h
src/fun/: filter.h  fun.c  fun.h  washer.c  washer.h
src/fun/sql/: bookmark.c  bookmark.h  cookie.c  cookie.h  history.c  history.h
src/sh/: after_build.sh  before_build.sh  final.sh  install.sh  update.sh  update_to_repo.sh
src/uri/: uri.c  uri.h
src/util/: atom.c  atom.h  macros.h  path.c  path.h  util.c  util.h
